...
        modifier = Modifier
            .nestedScroll(scrollBehavior.nestedScrollConnection),
        topBar = {
            LargeTopAppBar(
                title = {
                    Text(
                        text = "Create Your Profile",
                        fontWeight = FontWeight.Medium,
                        color = Color.Black.copy(alpha = 0.9f)
                    )
                },

                scrollBehavior = scrollBehavior,
...
                        color = White,
                        strokeWidth = 2.dp,
                        modifier = Modifier.size(22.dp)
                    )
                } else {
                    Text(
                        text = "Create Account",
                        fontSize = 16.sp,
                        fontWeight = FontWeight.SemiBold
                    )
                }
            }
        }
...
