...
                        "Under the construction!" to R.drawable.icon_it_support
                })

            Spacer(modifier = Modifier.height(16.dp))

            MenuCard(
                title = "Account Settings",
                icon = R.drawable.icon_setting,
                onClick = { onNavigateToAccountSetting() })
            Spacer(modifier = Modifier.height(2.dp))
            MenuCard(
                title = "About Us",
                icon = R.drawable.icon_about_us,
...
